fix(Analysis): Arff files are incremental (follows previous commit)